[package]
name    = "music"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow             = "1.0.34"
chrono             = "0.4.19"
dirs               = "3.0.1"
fehler             = "1.0.0"
id3                = "0.6.4"
metaflac           = "0.2.4"
rayon              = "1.5.0"
read_input         = "0.8.4"
snafu              = "0.6.9"
structopt          = "0.3.20"
tempfile           = "3.1.0"
tracing            = "0.1.21"
tracing-appender   = "0.1.1"
tracing-log        = "0.1.1"
tracing-subscriber = "0.2.15"
walkdir            = "2.3.1"
