[package]
name    = "music"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
walkdir = "2.3.1"
dirs = "3.0.1"
snafu = "0.6.9"
id3 = "0.5.1"
chrono = "0.4.19"
structopt = "0.3.20"
metaflac = "0.2.4"
tempfile = "3.1.0"
rayon = "1.5.0"
anyhow = "1.0.34"
fehler = "1.0.0"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
tracing-appender = "0.1.1"
tracing-log = "0.1.1"
read_input = "0.8.4"
