[package]
name = "project-root"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
snafu = "0.6.10"
structopt = "0.3.22"
